--- a/client/styles.css
+++ b/client/styles.css
@@ -1,5 +1,6 @@
 body {
   padding: 1rem;
+  padding-top: 10rem;
   max-width: 35em;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
