feat: added merchantID for the url

--- a/advanced-integration/views/checkout.ejs
+++ b/advanced-integration/views/checkout.ejs
@@ -9,7 +9,7 @@
     <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
     <!-- Include PayPal SDK Script with components=applepay for Custom Applepay Component-->
     <script
-      src="https://www.paypal.com/sdk/js?components=applepay&client-id=<%= clientId %>"
+      src="https://www.paypal.com/sdk/js?components=applepay&client-id=<%= clientId %>&merchant-id=<%= merchantId %>"
       data-client-token="<%= clientToken %>" data-partner-attribution-id="APPLEPAY"
     ></script>
 
