--- a/advanced-integration/views/checkout.ejs
+++ b/advanced-integration/views/checkout.ejs
@@ -16,6 +16,8 @@
       .container {
         text-align: center;
         background-color: lightgray;
+        max-width: 50%;
+        min-height: 25em;
         padding: 20px;
       }
     </style>
