chore: minor changes to basic test app

--- a/advanced-integration/views/checkout.ejs
+++ b/advanced-integration/views/checkout.ejs
@@ -41,8 +41,10 @@
   <body>
     <div class="container">
       <h3>Sample Applepay Integration</h3>
-      <h6>Basic (no amount breakdown / no shipping)</h6>
+      <h6>Basic Integration (no amount breakdown / no shipping)</h6>
       <div id="applepay-container"></div>
+
+      <p><i> You wont be charged any money. Test with Sandbox Applepay Cards. You can find them <a target="_blank" src="https://developer.apple.com/apple-pay/sandbox-testing/"></a>here</i></p>
     </div>
     <script src="app.js"></script>
   </body>
