chore: correct anchor tag

--- a/advanced-integration/views/checkout.ejs
+++ b/advanced-integration/views/checkout.ejs
@@ -50,7 +50,7 @@
       <h6>Basic Integration (no amount breakdown / no shipping)</h6>
       <div id="applepay-container"></div>
 
-      <div><i> You wont be charged any money. Try with Apple Pay Test Cards on Sandbox. You can find them <a target="_blank" src="https://developer.apple.com/apple-pay/sandbox-testing/">here</a></i></div>
+      <div><i> You wont be charged any money. Try with Apple Pay Test Cards on Sandbox. You can find them <a target="_blank" href="https://developer.apple.com/apple-pay/sandbox-testing/">here</a></i></div>
     </div>
     <script src="app.js"></script>
   </body>
